--- a/values.yml
+++ b/values.yml
@@ -14,3 +14,9 @@ data:
     host: airflow-psql
     user: postgres
     pass: airflow
+
+dags:
+  gitSync:
+    enabled: true
+    repo: https://github.com/fjcloud/airflow-dags.git
+    branch: main
